[package]
name = "ndn-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
hex = "0.4.3"
itertools = "0.12.1"
ndn-tlv = {version = "0.1.0", path = "../ndn-tlv"}
regex = "1.10.3"
thiserror = "1.0.56"
url = "2.5.0"
urlencoding = "2.1.3"
