[package]
name = "ndn-protocol"
description = "Named Data Networking - main protocol parsing and encoding"
version = "0.3.0"
edition = "2021"
license = "MIT"
categories = ["network-programming", "parsing"]
keywords = ["ndn", "named", "data", "networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bytes = "1.5.0"
derive_more = "0.99.17"
hex = "0.4.3"
itertools = "0.12.1"
ndn-tlv = {version = "0.3.0", path = "../ndn-tlv"}
rand = "0.8.5"
regex = "1.10.3"
rsa = { version = "0.9.6", features = ["sha2", "pkcs5"] }
sha2 = "0.10.8"
thiserror = "1.0.56"
url = "2.5.0"
urlencoding = "2.1.3"

[dev-dependencies]
base64 = "0.21.7"
